2013-06-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/edit_canvas.cpp:
	* src/main_window.cpp:
	* src/options.cpp:
	* src/options.h:
	- フィールド描画のスケールをコンフィグダイアログ上で設定できるように機能追加

2013-06-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/config_dialog.cpp:
	* src/config_dialog.h:
	* src/Makefile.am:
	* src/edit_canvas.cpp:
	* src/main.cpp:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- ConfigDialogを追加
	- フィールドの表示サイズを指定できるように機能追加

2013-05-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	- Data Auto Selectをオフにした場合，X軸にボールが吸い付く機能もオ
	フにするように変更

	* src/edit_canvas.cpp:
	- ゴールポストを追加

	* src/edit_data.cpp:
	- 自動バックアップのファイル名フォーマットを変更

2012-06-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_canvas.cpp:
	- シュートコース表示用のゴール幅を-0.1

	* src/main_window.cpp:
	- シュートコース表とキーパー移動範囲の表示切り替えショートカットキー
	を追加．シュートは's'，キーパーは'g'
	- シンメトリーモードの切り替えショートカットキーを'm'へ変更

	* src/edit_canvas.cpp:
	- 拡大縮小操作時にフォーカス位置がずれていたバグを修正
	- キーパーの移動範囲円周上にインデックス番号描画を追加
	- シュートによるボール移動範囲の円弧を描画する機能を追加
	- シュート目標X座標値をゴールライン-0.001に変更

	* src/edit_canvas.cpp:
	* src/edit_canvas.h:
	* src/main_window.cpp:
	* src/main_window.h:
	* src/options.cpp:
	* src/options.h:
	- ゴール隅へシュートを撃たれた場合のボールの移動予測位置表示機能を追加
	- キーパーの移動範囲円表示機能を追加．初速と体の向きは考慮していない

2012-06-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	* src/edit_data.h:
	* src/main_window.cpp:
	- ファイルセーブ時に日時をコメントとしてファイル先頭に書き込む機能を追加

2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	- autoconfマクロの宣言順の不備を修正

2012-02-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/main_window.cpp:
	- 新規作成時のタイプ選択からKNNとCDTを削除

2011-06-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/Makefile.am:
	- average_formationをインストールターゲットに変更

	* src/edit_canvas.cpp:
	- 背面表示のフォーメーションデータのインデックス番号が0から始まる
	ように変更

2011-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_canvas.cpp: