@@ -188,6 +188,9 @@ public:
     void updateRoleData( const int unum,
                          const int symmetry_unum,
                          const std::string & role_name );
+    void updateMarkerData( const int unum,
+                           const bool marker,
+                           const bool setplay_marker );
 
     void moveBallTo( const double & x,
                      const double & y );
